Fixed issues before the testing, forgot to commit them.

--- a/src/main/resources/assets/stevescarts/lang/en_US.lang
+++ b/src/main/resources/assets/stevescarts/lang/en_US.lang
@@ -202,9 +202,9 @@ steves_vehicles:gui.state.activation:shield=Is shield active
 steves_vehicles:gui.state.activation:chunk=Is chunk loader active
 steves_vehicles:gui.state.activation:invisibility=Is invisibility core active
 steves_vehicles:gui.state.activation:drill=Is drill active
-steves_steves_vehicles:gui.state.activation:cage=Is auto pick up active
-steves_steves_vehicles:gui.state.storage:chest_full=Is storage completely full
-steves_steves_vehicles:gui.state.storage:chest_empty=Is storage completely empty
+steves_vehicles:gui.state.activation:cage=Is auto pick up active
+steves_vehicles:gui.state.storage:chest_full=Is storage completely full
+steves_vehicles:gui.state.storage:chest_empty=Is storage completely empty
 steves_vehicles:gui.state.passenger:passenger=Has passenger
 steves_vehicles:gui.state.passenger:animal=Has animal passenger
 steves_vehicles:gui.state.passenger:tameable=Has tameable passenger
