Fixed name issue for the solar panel upgrade.

--- a/src/main/resources/assets/stevescarts/lang/en_US.lang
+++ b/src/main/resources/assets/stevescarts/lang/en_US.lang
@@ -464,7 +464,7 @@ steves_vehicles:tile.upgrade.power:power_crystal.name=Upgrade: Power Crystal
 steves_vehicles:tile.upgrade.power:co2_friendly.name=Upgrade: CO2 friendly
 steves_vehicles:tile.upgrade.power:generic_engine.name=Upgrade: Generic engine
 steves_vehicles:tile.upgrade.power:thermal_engine_upgrade.name=Upgrade: Thermal Engine
-steves_vehicles:tile.upgrade.power:solar_panel.name=Solar Panel
+steves_vehicles:tile.upgrade.power:solar_panel.name=Upgrade: Solar Panel
 steves_vehicles:tile.upgrade.production:module_knowledge.name=Upgrade: Module knowledge
 steves_vehicles:tile.upgrade.production:industrial_espionage.name=Upgrade: Industrial espionage
 steves_vehicles:tile.upgrade.production:experienced_assembler.name=Upgrade: Experienced assembler
