Updated Minecraft version

--- a/src/main/resources/assets/stevescarts/lang/en_US.lang
+++ b/src/main/resources/assets/stevescarts/lang/en_US.lang
@@ -1,3 +1,7 @@
+itemGroup.SC2Modules=Steve's Carts 2 Modules
+itemGroup.SC2Items=Steve's Carts 2 Components
+itemGroup.SC2Blocks=Steve's Carts 2 Blocks
+
 # ======================================
 				BLOCK GUI
 # ======================================
